@@ -1,3 +1,4 @@
+ - Add missing friend to Face.h (reported by Garth N. Wells)
 0.5.6 [2005-05-17]
  - Implementation of boundary conditions for general order Lagrange (experimental)
  - Use interpolation function automatically generated by FFC
